--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.1.1",
